# MegaDocker

./: .gitignore  .prettierrc  CHANGELOG.md  MANIKINS-LIST.md  README.md  ROADMAP.md  asset-manifest.json  electron.js  index.html  package.json  reindex.sh  template.env  testfilename.txt  tsconfig.json  tsconfig.spec.json
.github/workflows/: covector-version-or-publish.yml  cross-compile.yml  test-action.yml
coverage/: clover.xml
coverage/lcov-report/: index.html
electron-configs/: linux-arm-64.yml  linux-intel-64.yml  mac-arm-64.yml  mac-intel-64.yml  win-arm-64.yml  win-intel-64.yml
public/: App.css  electron.ts  index.html  manifest.json
src/: index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/classes/: ICustomMite.test.ts  ICustomMite.ts  IManikin.test.ts  IManikin.ts  IManikinPort.ts  IManikinTableActions.ts  IManikinVariable.ts  IManikinWithPorts.ts  IManikinWithPortsAndVariables.ts  IManikinWithVariables.ts  IMegaDockerAction.ts  IMegaDockerState.ts  IMemory.test.ts  IMite.test.ts  IMite.ts  IMob.test.ts  IMob.ts  IReducerActions.ts  TableManikins.ts
src/components/: App.css  App.test.tsx  App.tsx  ButtonExportDockerSwarm.test.tsx  ButtonExportDockerSwarm.tsx  ButtonExportKubernetes.test.tsx  ButtonExportKubernetes.tsx  ButtonExportKubernetesPod.tsx  ButtonExportYML.tsx  ButtonExportZipFile.tsx  ButtonGetDocker.test.tsx  ButtonGetDocker.tsx  ButtonLaunchMob.tsx  ButtonLoadMobFile.tsx  ButtonOpenMob.test.tsx  ButtonOpenMob.tsx  ButtonRow.tsx  ButtonSaveMob.test.tsx  ButtonSaveMob.tsx  ButtonSaveMobFile.tsx  ButtonSaveZipFile.tsx  ButtonTemplate.test.tsx  ButtonTemplate.tsx  ButtonUploadMobFile.tsx  ContainerButtonPane.test.tsx  ContainerButtonPane.tsx  ContainerButtonRow.tsx  ContainerInfoPane.test.tsx  ContainerInfoPane.tsx  ContainerMainArea.test.tsx  ContainerMainArea.tsx  ContainerManikinPane.test.tsx  ContainerManikinPane.tsx  ContainerMemoryPane.test.tsx  ContainerMemoryPane.tsx  ContainerVariablePane.tsx  Context.tsx  DarkModeSwitch.tsx  DataButtons.tsx  ExportButtons.tsx  (+30 more)
src/fonts/: Asap.ts
src/from-tutorial/: App.tsx  Store.tsx  interfaces.ts
src/functions/: runningInTauri.ts
src/globals/: _globals.ts  _manikins.ts  allManikins.ts  (+16 more)
(+1426 files in other folders)
