[package]
name = "megadocker"
version = "0.5.1"
description = "Microservices builder"
authors = ["George Georgulas IV"]
license = ""
repository = ""
default-run = "megadocker"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
rustfmt = { version = "0.10.0" }
tauri-build = { version = "1.0.0-rc.3", features = [] }

[dependencies]
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
tauri = { version = "1.0.0-rc.3", features = ["fs-write-file", "shell-open", "updater"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
