[package]
name = "megadocker"
version = "0.5.2"
description = "Microservices builder"
authors = ["George Georgulas IV"]
license = ""
repository = "https://github.com/VirtualEstatePlanner/MegaDocker"
default-run = "megadocker"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
rustfmt = { version = "0.10.0" }
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
tauri = { version = "1.2.3", features = ["fs-read-file", "fs-write-file", "shell-open"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
